Fix meta description name

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     />
     <meta name="msapplication-TileColor" content="#00aba9" />
     <meta name="theme-color" content="#81dcf3" />
-    <meta name="Robofriends" content="Browse robotic friends." />
+		<meta name="Description" content="Browse robotic friends." />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
